--- a/css/main_style.css
+++ b/css/main_style.css
@@ -251,6 +251,7 @@ body {
 
 
 /* play_btn 공통꾸미기 */
+/* 재생버튼 포지션으로 올려서 호버시 등장 */
 .play_btn{
     cursor: pointer;
     opacity: 0;
@@ -262,7 +263,6 @@ body {
     width: 100%;
     height: 100%;
 }
-
 .play_btn:hover{
     opacity: 1;
 }
@@ -457,7 +457,6 @@ body {
 
 /* new */
 
-
 #new {
     width: 1320px;
     margin: 0 auto;
@@ -634,7 +633,6 @@ body {
     top: 0;
     width: 122px;
     height: 82px;
-
 }
 
 #mv_slide_wrap .play_btn img {
@@ -649,7 +647,6 @@ body {
     transform: scale(0.8);
     transition: transform 1s;
     margin-left: 0 !important;
-    /* margin-right: 0 !important; */
 }
 
 #mv_slide_wrap .swiper-slide .bottom {
