--- a/css/main_style.css
+++ b/css/main_style.css
@@ -773,7 +773,7 @@ body {
     height: 750px;
     padding: 50px 0;
     box-sizing: border-box;
-    background: url(../images/user_playlist_bg.png) no-repeat right top 82px;
+    background: url(../images/user_playlist_bg_b.gif) no-repeat right top 82px;
 }
 
 .u_p_text {
